--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
            
             <div class="logo">
-                <a href="#"><img src="img/logo.png" alt="Logo"></a>
+                <a href="#"><img src="img/logo.webp" alt="Logo"></a>
             </div>
 
             <nav>
@@ -90,7 +90,7 @@
                         <div class="web-project">
                             <a href="/projects/firstproject-designcomp-jidul/" target="_blank">
                             <h3>Stocky Photos</h3>
-                            <img src="img/first-project.png" alt="First Project">
+                            <img src="img/first-project.webp" alt="First Project">
                             <p>In order to finish this project I used HTML, CSS, and Javascript.
                             I created the mobile and tablet design in my own while for desktop screen I need to 
                             choose between grid styles and flex box.  I learned to use grid in this projects.
