--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
            
             <div class="logo">
                 <a href="#"><img src="img/logo.webp" alt="Logo"></a>
+                <!--Photo by Daniel Putzer: https://www.pexels.com/photo/photography-of-macbook-half-opened-on-white-wooden-surface-633409/  -->
             </div>
 
             <nav>
