--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <img src="img/first-project.webp" alt="First Project">
                             <p>In order to finish this project I used HTML, CSS, and Javascript.
                             I created the mobile and tablet design in my own while for desktop screen I need to 
-                            choose between grid styles and flex box.  I learned to use grid in this projects.
+                            choose between grid styles and flex box.  I learned to use grid in this project.
                             </p></a>
                         </div>
                         <div class="web-project">
@@ -112,7 +112,7 @@
                                 <img src="img/third-project.png" alt="First Project">
                                 <p>In this project I was asked to build a web site about a specific food. So I choose
                                     cookie as my topic. I research about the white macadamia cookie. I used html, css and Javascript.
-                                    I learned how to put a google analytics in this projects.
+                                    I learned how to put a google analytics in this project.
                                 </p></a>
                         </div> 
                        
