project to porfolio

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
             <hr class="dotted">
 
-            <section class="projects" id="projects">
+            <section class="Portfolio" id="projects">
               
-                <div class="three-projects">
+                <div class="three-portfolio">
                     <h2>Projects</h2>
 
-                    <div class="list-of-projects">
-                        <div class="web-project">
+                    <div class="list-of-portfolio">
+                        <div class="portfolio">
                             <a href="/projects/firstproject-designcomp-jidul/" target="_blank">
                             <h3>Stocky Photos</h3>
                             <img src="img/first-project.webp" alt="First Project">
@@ -97,7 +97,7 @@
                             choose between grid styles and flex box.  I learned to use grid in this project.
                             </p></a>
                         </div>
-                        <div class="web-project">
+                        <div class="web-portfolio">
                             <a href="/projects/webdashboard/" target="_blank">
                                 <h3>Web Application DashBoard</h3>
                                 <img src="img/project-two.png" alt="First Project">
@@ -106,7 +106,7 @@
                                     I used Tailwind css and learned Tailwind Css in this project.
                                 </p></a>
                         </div>
-                        <div class="web-project">
+                        <div class="web-portfolio">
                             <a href="/projects/white-macadamia-nut-cookie/" target="_blank">
                                 <h3>White Macadamia Nut Cookie </h3>
                                 <img src="img/third-project.png" alt="First Project">
