--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h2>Projects</h2>
 
                     <div class="list-of-portfolio">
-                        <div class="portfolio">
+                        <div class="web-portfolio">
                             <a href="/projects/firstproject-designcomp-jidul/" target="_blank">
                             <h3>Stocky Photos</h3>
                             <img src="img/first-project.webp" alt="First Project">
