--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <section class="Portfolio" id="projects">
               
                 <div class="three-portfolio">
-                    <h2>Projects</h2>
+                    <h2>Portfolio</h2>
 
                     <div class="list-of-portfolio">
                         <div class="web-portfolio">
