--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
             </section>
         
             <hr class="dotted">
+            <section class="projects">
+                <h2>
+                    Projects
+                </h2>
+                <div class="projects-list">
+                    <ul>
+                       <li><img src="img/ballero.webp " alt="logo"></li> 
+                       <li><img src="img/car-one.webp"  alt="car-one"></li> 
+                       <li><img src="img/car-two.webp" alt="car-two"></li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="dotted">
 
             <section class="resume" id="resume">
                 <div class="my-resume">
