--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </h2>
                 <div class="projects-list">
                     <ul>
-                       <li><img src="img/ballero.webp " alt="logo"></li> 
+                       <li><img src="img/ballero.png" alt="logo"></li> 
                        <li><img src="img/car-one.webp"  alt="car-one"></li> 
                        <li><img src="img/car-two.webp" alt="car-two"></li>
                     </ul>
