--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
             <hr class="dotted">
             <section class="projects">
                 <h2>
-                    Projects
+                    Projects for photography
                 </h2>
+                
                 <div class="projects-list">
                     <ul>
                   
