--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
             </section>
         
-            <hr class="dotted">
+            <!-- <hr class="dotted">
             <section class="projects">
                 <h2>
                     Projects for photography
@@ -135,7 +135,7 @@
                        <li><img src="img/car-two.webp" alt="car-two"></li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
             <hr class="dotted">
 
             <section class="resume" id="resume">
