--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <main>
             <section class="banner">
                 <div class="banner-contents">
-                    <h1>I’ll make your ideas alive </h1>
+                    <h1>I’ll make your ideas come alive </h1>
 
                     <div class="list-for-banner">
                         <ul class="banner-list">
