--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div class="about-text">
                         <p>
                             Hello, I'm Jehan Marius Idul. I'm a Digital Media and IT (Information Technology) student specialized in Web 
-                            Design and Development who is passionate about creating and designing websites.</br> 
-                            Before taking Digital Media and IT i was enrolled in Drafting Engineering and Design.</br> But I'm so curious on how to design and create a website so I decided to change my path from Engineering to Web Designer and Developer.</br> While taking Web Design and Development I also discover new hobby that turned into passion: photography.</br>
+                            Design and Development who is passionate about creating and designing websites.
+                            Before taking Digital Media and IT i was enrolled in Drafting Engineering and Design. But I'm so curious on how to design and create a website so I decided to change my path from Engineering to Web Designer and Developer. While taking Web Design and Development I also discover new hobby that turned into passion: photography.
                          </p>
 
                         <p>
