--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             <section class="about" id="about">
                 <div class="about-contents">
                     <h2>About Me</h2>
+
+
                     <div class="about-text">
                         <p>
                             Hello, I'm Jehan Marius Idul. I'm a Digital Media and IT (Information Technology) student specialized in Web 
@@ -76,8 +78,14 @@
                          </p>
 
                         <p>
-                            
+                            During my free time, I love playing basketball, workingout or take some photos to refresh my mind. It helps me to create new ideas when designing and creating a website. For me taking Web Design and Development, help me a lot to discover new things about myself and it also boost my confidence to collaborate with other people while working.
                         </p>
+
+                        <p>I am proficient in Adobe Apps like Adobe XD, Photoshop and Illustrator. Also, I use HTML. CSS and Javascript for creating website.  
+                            For inquiries, you can email me at Jehan_idul@yahoo.ca or phone me at (587) 334-3393.
+                        </p>
+
+                       
                     </div>
 
                 </div>
