--- a/index.html
+++ b/index.html
@@ -69,24 +69,30 @@
                 <div class="about-contents">
                     <h2>About Me</h2>
 
+                    <div class="pic-n-text">
 
-                    <div class="about-text">
-                        <p>
-                            Hello, I'm Jehan Marius Idul. I'm a Digital Media and IT (Information Technology) student specialized in Web 
-                            Design and Development who is passionate about creating and designing websites.
-                            Before taking Digital Media and IT i was enrolled in Drafting Engineering and Design. But I'm so curious on how to design and create a website so I decided to change my path from Engineering to Web Designer and Developer. While taking Web Design and Development I also discover new hobby that turned into passion: photography.
-                         </p>
+                        <div class="pic">
 
-                        <p>
-                            During my free time, I love playing basketball, workingout or take some photos to refresh my mind. It helps me to create new ideas when designing and creating a website. For me taking Web Design and Development, help me a lot to discover new things about myself and it also boost my confidence to collaborate with other people while working.
-                        </p>
+                        </div>
+                        <div class="about-text">
+                            <p>
+                                Hello, I'm Jehan Marius Idul. I'm a Digital Media and IT (Information Technology) student specialized in Web 
+                                Design and Development who is passionate about creating and designing websites.
+                                Before taking Digital Media and IT i was enrolled in Drafting Engineering and Design. But I'm so curious on how to design and create a website so I decided to change my path from Engineering to Web Designer and Developer. While taking Web Design and Development I also discover new hobby that turned into passion: photography.
+                            </p>
 
-                        <p>I am proficient in Adobe Apps like Adobe XD, Photoshop and Illustrator. Also, I use HTML. CSS and Javascript for creating website.  
-                            For inquiries, you can email me at Jehan_idul@yahoo.ca or phone me at (587) 334-3393.
-                        </p>
+                            <p>
+                                During my free time, I love playing basketball, workingout or take some photos to refresh my mind. It helps me to create new ideas when designing and creating a website. For me taking Web Design and Development, help me a lot to discover new things about myself and it also boost my confidence to collaborate with other people while working.
+                            </p>
 
-                       
-                    </div>
+                            <p>I am proficient in Adobe Apps like Adobe XD, Photoshop and Illustrator. Also, I use HTML. CSS and Javascript for creating website.  
+                                For inquiries, you can email me at Jehan_idul@yahoo.ca or phone me at (587) 334-3393 or fill out the form under contact me.
+                            </p>
+
+                        
+                        </div>  <!---end about text-->
+
+                     </div><!---end pic n text-->
 
                 </div>
             </section>
