--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
            
             <div class="logo">
-                <a href="#"><img src="img/logo.webp" alt="Logo"></a>
+                <a href="index.html"><img src="img/logo.webp" alt="Logo"></a>
                 <!--Photo by Daniel Putzer: https://www.pexels.com/photo/photography-of-macbook-half-opened-on-white-wooden-surface-633409/  -->
             </div>
 
