--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
         <main>
             <section class="banner">
                 <div class="banner-contents">
-                   <h1>Hello, I'm Jehan, a web designer specializing ing UX/UI Design.</h1>
+                    <h1>Hello. I'm Jehan, a web designer specializing in UX/UI Design. </h1>
+
+                    <div class="list-for-banner">
+                        <ul class="banner-list">
+                            <li>sadsadsa</li>
+                            <li>Jehan Idul</li>
+                            <li>Web Designer</li>
+                        </ul>
+                        <ul class="banner-list">
+                            <li>Email: Jehan_idul@yahoo.ca</li>
+                            <li>Phone #: (587) 334-3393</li>
+                        </ul>
+                    </div>
                  
                 </div>
                 
